fixing sidebar overlap issue

--- a/src/App.css
+++ b/src/App.css
@@ -105,6 +105,7 @@ hr {
   width: 300px;
   z-index: 99999999999 !important;
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  position: relative;
 }
 
 .theme-light .flyout-menu {
